--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,7 @@ section .content-box {
 /* Default blurred state for card images. */
 .card-box img {
     width: 100%;
-    filter: blur(5px) grayscale(50%) brightness(90%);
+    filter: blur(2px) grayscale(50%) brightness(90%);
     object-fit: cover;
 }
 
@@ -180,14 +180,14 @@ footer {
     display: flex;
     padding: 20px;
     width: 100%;
+    background-color: var(--accent1);
 }
 
 /* Text settings for footer text. */
 footer h2 {
     flex: 1;
     width: fit-content;
-    border: solid 3px var(--accent1);
-    color: var(--accent1);
+    color: var(--soft-white);
     text-align: center;
 }
 
